# jas

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  justfile
.github/: check.yml  dependabot.yml
.github/workflows/: audit.yml  check.yml  release.yml  snap.yml  snapcraft.yml  tmp.yml
pkg/: snapcraft.template.yaml  snapcraft.yaml
src/: guess.rs  install.rs  main.rs  sha.rs
tests/: test_install.rs  test_sha.rs
