[package]
name = "jas"
version = "0.1.0"
categories = ["command-line-utilities"]
description = "Just an installer"
edition = "2021"
license = "MIT"
repository = "https://github.com/rikhuijzer/jas"
keywords = ["file", "filesystem", "tool"]

[dependencies]
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0"
sha2 = "0.11.0-pre.2"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(windows)'.dependencies]
zip = "2.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
toml = "0.8"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"