[package]
name = "jas"
version = "0.3.2"
categories = ["command-line-utilities"]
description = "Just an installer"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/jas"
repository = "https://github.com/rikhuijzer/jas"
keywords = ["file", "filesystem", "tool"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
flate2 = "1.0"
# Used inside Rust's bootstrapping phase so should be safe.
tar = "0.4"
hex = "0.4.3"
ureq = { version = "3", features = ["json"] }
# May speed up build time according to rust-lang/rust/src/bootstrap/Cargo.toml.
serde = "1.0"
serde_json = "1.0"
# Used inside Rust's bootstrapping phase so should be safe.
sha2 = "0.10"
# Used inside Rust's bootstrapping phase so should be safe.
xz2 = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
zip = "3"

[features]
add_path = []
default = ["add_path"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
toml = "0.9"

[profile.dev]
debug = 0
strip = "debuginfo"
split-debuginfo = "unpacked"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
